# recap

./: .rustc_info.json  Cargo.toml  README.md  analyze.sh  build-and-run.sh  build.sh  ideas.md  prompt.md
show_commits/: Cargo.toml
show_commits/src/: main.rs
src/: bus_factor.rs  cli.rs  display.rs  main.rs  midi.rs
src/commands/: cli.rs  mod.rs
src/git/: mod.rs  operations.rs
src/hotspots/: mod.rs
src/music/: midi.rs  mod.rs
src/ui/: mod.rs
src/who_knows/: analyzer.rs  display.rs  mod.rs  types.rs
